--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This project is created for learning Linux OS for embedded.
+This project is created for learning Linux OS for embedded, Makefiles, CMake.
